restruct: TocNode 로직 재구조 및 거기에 맞게 테스트 수정